--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
 	"require": {},
 	"require-dev": {},
 	"autoload": {
-		"classmap": [
-			"src/"
-		]
+		"psr-4": { "PhpScotland2016\\DemoService\\": "" }
 	}
 }
 
