--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	"require": {},
 	"require-dev": {},
 	"autoload": {
-		"psr-4": { "PhpScotland2016\\DemoService\\": "" }
+		"psr-4": { "PhpScotland2016\\DemoServiceIf\\": "" }
 	}
 }
 
